[gd_scene load_steps=4 format=3 uid="uid://rotms4ajkw6i"]

[ext_resource type="Script" uid="uid://bnweuouyfu3rd" path="res://main_menu.gd" id="1_06t4h"]

[sub_resource type="LabelSettings" id="LabelSettings_7vrkn"]
font_size = 50
font_color = Color(1, 0, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_fu7sn"]
font_size = 150
font_color = Color(0, 1, 1, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_06t4h")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.1600509, 0.17431802, 0.21915743, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="TitleLabel2" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Project"
label_settings = SubResource("LabelSettings_7vrkn")

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "MOMENTUM"
label_settings = SubResource("LabelSettings_fu7sn")
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Game Start"

[node name="SettingsButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Settings"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Quit"

[node name="SettingsPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsPanel"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="SoundLabel" type="Label" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SoundSlider" type="HSlider" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
max_value = 1.0
value = 1.0
tick_count = 10
ticks_position = 3

[node name="SensitivityLabel" type="Label" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Mouse Sensitivity"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SensitivitySlider" type="HSlider" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
min_value = 10.0
max_value = 50.0
value = 30.0

[node name="BackButton" type="Button" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Back"
icon_alignment = 2

[connection signal="pressed" from="CenterContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="SettingsPanel/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
